# twin

./: .env.example  .gitignore  package-lock.json
.github/workflows/: deploy.yml  destroy.yml
backend/: .gitignore  deploy.py  me.txt  pyproject.toml  requirements.txt  server.py
backend/data/: facts.json  style.txt  summary.txt
backend/email_services/: __init__.py  secure_resume.py  send_email.py
backend/testing/: test_local.py
frontend/: .gitignore  CLAUDE.md  package-lock.json  package.json  test_local.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: digitial-twin-portfolio.tsx  twin.tsx
frontend/test/: test_captcha_html.html
frontend/types/: recaptcha.d.ts
frontend/utilities/: recaptcha.ts
scripts/: deploy.sh  destroy.sh
terraform/: delete-github-iam.sh  delete-roles-with-iam-permissions.sh  main.tf  prod.tfvars  reset-terraform-state.sh  terraform.tfvars  variables.tf
terraform-generator/: azure.tf  config.yaml  generate_tf.py  main.py  pyproject.toml
terraform-generator/.out/: apigateway.tf  cloudfront.tf  lambda.tf  locals.tf  route53.tf  s3.tf
terraform-generator/templates/: apigateway.tf.j2  aws_instance.tf.j2  azure_vm.tf.j2  cloudfront.tf.j2  lambda.tf.j2  locals.tf.j2  route53.tf.j2  s3.tf.j2
